--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
 
             <div class="menu-inside-wrapper">
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu">
-                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a [routerLink]="/livestream">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
+                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a [routerLink]="'/livestream'">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
 
               <div class="mobile-social-search">
                 <div class="search-container">
