--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
 
             <div class="menu-inside-wrapper">
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu">
-                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a [routerLink]="'/livestream'">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
+                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a routerLink="/livesteam" routerLinkActive="active">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
 
               <div class="mobile-social-search">
                 <div class="search-container">
@@ -445,6 +445,6 @@ l34.8,21.76c1.955,1.233,4.445,1.233,6.4,0l34.8-21.76l135.44,107.04V289.36z M358.
     </symbol>
   </defs>
 </svg>
-
+<router-outlet></router-outlet>
 </body>
 </html>
