--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <base href="/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="profile" href="http://gmpg.org/xfn/11">
   <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
   <title>Yuwwwwwww &#8211; poltron</title>
